[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Tiny5-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/UIButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55, 15 )

[node name="UIButton" type="Area2D"]
script = ExtResource( 2 )

[node name="Outline" type="ColorRect" parent="."]
margin_left = -52.0
margin_top = -16.0
margin_right = 58.0
margin_bottom = 14.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = -46.0
margin_top = -11.0
margin_right = 54.0
margin_bottom = 9.0
mouse_filter = 2
color = Color( 0.145098, 0, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -46.0
margin_top = -10.0
margin_right = 54.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "ENTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_UIButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UIButton_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
